// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should create environment with id and name provided 1`] = `"Successfully created environment Staging (staging)"`;

exports[`should exit 1 when no args: help data is incorrect 1`] = `
"Usage: contentful space environment create --name 'Your Environment Name'

Options:
  -h, --help                Show help                                  [boolean]
  --environment-id, -e      Id of the environment to create           [required]
  --name, -n                Name of the environment to create         [required]
  --source, --src           ID of the source environment to create the new
                            environment from                            [string]
  --space-id, -s            ID of the space that the environment will belong to
                                                                        [string]
  --await-processing, -w    Wait until the environment is processed and ready
                                                      [boolean] [default: false]
  --management-token, --mt  Contentful management API token             [string]

See more at:
https://github.com/contentful/contentful-cli/tree/master/docs/space/environment/
create
Copyright 2019 Contentful
Missing required arguments: environment-id, name"
`;

exports[`should print help message: help data is incorrect 1`] = `
"Usage: contentful space environment create --name 'Your Environment Name'

Options:
  -h, --help                Show help                                  [boolean]
  --environment-id, -e      Id of the environment to create           [required]
  --name, -n                Name of the environment to create         [required]
  --source, --src           ID of the source environment to create the new
                            environment from                            [string]
  --space-id, -s            ID of the space that the environment will belong to
                                                                        [string]
  --await-processing, -w    Wait until the environment is processed and ready
                                                      [boolean] [default: false]
  --management-token, --mt  Contentful management API token             [string]

See more at:
https://github.com/contentful/contentful-cli/tree/master/docs/space/environment/
create
Copyright 2019 Contentful"
`;
